--- a/src/main/resources/webroot/skillManagement.html
+++ b/src/main/resources/webroot/skillManagement.html
@@ -14,6 +14,7 @@
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-resource.min.js"></script>
     <script src="lib/ui-bootstrap-tpls.min.js"></script>
+    <script src="lib/ng-flow-standalone.min.js"></script>    
     
    <script src="cvio.js"></script>
   </head>
